--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,9 +54,18 @@
     <string name="title_report_balancing">RecordBalancing</string>
     <string name="title_report_skipping">RecordSkipping</string>
     <string name="title_report_comments">RecordComments</string>
+    <string name="title_view_all">ViewAllDetailsStudent</string>
 
     <string name="title_activity_tutorial">TutorialActivity</string>
     <string name="title_call_webservice">MainMenuActivity</string>
+
+    <string name="hint1"><i>UserName</i></string>
+    <string name="hint2"><i>Password</i></string>
+    <string name="hint3"><i>Enter Student Name</i></string>
+    <string name="hint4"><i>Enter Teacher Name</i></string>
+    <string name="hint5"><i>Enter Age (1-20)</i></string>
+    <string name="hint6"><i>Enter School</i></string>
+    <string name="hint7"><i>Enter Grade (1-8)</i></string>
 
     <string-array name="stds">
         <item>Sam Smith</item>
